<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Luke-U-Later 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="answer">0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="mult">*</string>
    <string name="del">del</string>
    <string name="sub">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="pow">^</string>
    <string name="equals">=</string>
</resources>